[tool.poetry]
name = "nova-chat"
version = "0.1.0"
description = ""
authors = ["junjieliang672 <jokitlueng@hotmail.com>"]
readme = "README.md"
packages = [{include = "nova_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
langchain = {extras = ["llm"], version = "^0.0.281"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
